--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ jsonfield==1.0.3
 whitenoise==3.2.2
 django-autocomplete-light==3.2.1
 django-debug-toolbar==1.5
+django-autoslug==1.9.3
 
 git+git://github.com/unclevasya/django-pure-pagination.git@disablable_margins
