--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,4 @@ pip==9.0.1
 setuptools==30.3.0
 
 git+git://github.com/unclevasya/django-pure-pagination.git@disablable_margins
-git+git://github.com/unclevasya/dota2.git@#1_basic_chat_support
+git+git://github.com/unclevasya/dota2.git@basic_chat_support
