--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ idna==2.5
 ipaddress==1.0.18
 jsonfield==1.0.3
 packaging==16.8
-protobuf==3.2.0
+protobuf==3.2.0 --no-binary=protobuf
 pyasn1==0.2.3
 pycparser==2.17
 pyparsing==2.2.0
