--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ django-debug-toolbar==1.5
 django-autoslug==1.9.3
 django-solo==1.1.2
 dota2==1.0.0
+discord.py==1.4.1
 
 git+git://github.com/unclevasya/django-pure-pagination.git@disablable_margins
