--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ discord.py==1.4.1
 timeago==1.0.14
 django-annoying==0.10.4
 django-reverse-admin==1.0.0
+pytz==2020.1
 
 git+git://github.com/unclevasya/django-pure-pagination.git@disablable_margins
 git+git://github.com/unclevasya/dota2.git@protobufs_update
