#75 added active_on field for QChannel

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-annoying==0.10.4
 django-reverse-admin==1.0.0
 pytz==2020.1
 yfinance==0.1.55
+django-multiselectfield==0.1.12
 
 git+git://github.com/unclevasya/django-pure-pagination.git@disablable_margins
 git+git://github.com/unclevasya/dota2.git@protobufs_update
