--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-Django==1.9
-jsonfield==1.0.3
-whitenoise==3.2.2
-django-autocomplete-light==3.2.1
-django-debug-toolbar==1.5
-django-autoslug==1.9.3
-django-solo==1.1.2
+Django==3.2.12
+jsonfield==3.1.0
+whitenoise==6.0.0
+django-autocomplete-light==3.9.1
+django-debug-toolbar==3.2.4
+django-autoslug==1.9.8
+django-solo==2.0.0
 discord.py==1.5.1
-timeago==1.0.14
-django-annoying==0.10.4
-django-reverse-admin==1.0.0
-pytz==2020.1
-yfinance==0.1.55
+timeago==1.0.15
+django-annoying==0.10.6
+django-reverse-admin==2.9.6
+pytz==2021.3
+yfinance==0.1.70
 django-multiselectfield==0.1.12
+djangorestframework==3.13.1
 
 git+git://github.com/unclevasya/django-pure-pagination.git@disablable_margins
 git+git://github.com/unclevasya/dota2.git@protobufs_update
