--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,5 @@ pytz==2020.1
 yfinance==0.1.55
 django-multiselectfield==0.1.12
 
-git+git://github.com/unclevasya/django-pure-pagination.git@disablable_margins
-git+git://github.com/unclevasya/dota2.git@protobufs_update
+git+https://github.com/unclevasya/django-pure-pagination.git@disablable_margins
+git+https://github.com/unclevasya/dota2.git@protobufs_update
